// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ParticipantList /> should render correctly 1`] = `
<ParticipantListstyle__Container>
  <div>
    <ParticipantListstyle__TitleContainer>
      <FormattedMessage
        id="registered.dynamic"
        tagName="h2"
        values={
          Object {
            "num": 1,
          }
        }
      />
    </ParticipantListstyle__TitleContainer>
    <ParticipantListstyle__List>
      <Relay(Participant)
        isAnonymous={false}
        key="0"
        participant={
          Object {
            "$fragmentRefs": null,
          }
        }
      />
    </ParticipantListstyle__List>
  </div>
</ParticipantListstyle__Container>
`;

exports[`<ParticipantList /> should render correctly when registeredAnonymously 1`] = `
<ParticipantListstyle__Container>
  <div>
    <ParticipantListstyle__TitleContainer>
      <FormattedMessage
        id="registered.dynamic"
        tagName="h2"
        values={
          Object {
            "num": 1,
          }
        }
      />
    </ParticipantListstyle__TitleContainer>
    <ParticipantListstyle__List>
      <Relay(Participant)
        isAnonymous={true}
        key="0"
        participant={
          Object {
            "$fragmentRefs": null,
          }
        }
      />
    </ParticipantListstyle__List>
  </div>
</ParticipantListstyle__Container>
`;

exports[`<ParticipantList /> should render correctly when super admin 1`] = `
<ParticipantListstyle__Container>
  <div>
    <ParticipantListstyle__TitleContainer>
      <FormattedMessage
        id="registered.dynamic"
        tagName="h2"
        values={
          Object {
            "num": 1,
          }
        }
      />
      <a
        className="btn btn-default"
        href="/export-my-event-participants/123454321"
        id="download-event-registration"
      >
        <Icon
          className="mr-5"
          color="#000"
          name="download"
          size={14}
        />
        <FormattedMessage
          id="global.export"
          values={Object {}}
        />
      </a>
    </ParticipantListstyle__TitleContainer>
    <ParticipantListstyle__List>
      <Relay(Participant)
        isAnonymous={false}
        key="0"
        participant={
          Object {
            "$fragmentRefs": null,
          }
        }
      />
    </ParticipantListstyle__List>
  </div>
</ParticipantListstyle__Container>
`;

exports[`<ParticipantList /> should render correctly when viewerDidAuthor 1`] = `
<ParticipantListstyle__Container>
  <div>
    <ParticipantListstyle__TitleContainer>
      <FormattedMessage
        id="registered.dynamic"
        tagName="h2"
        values={
          Object {
            "num": 1,
          }
        }
      />
      <a
        className="btn btn-default"
        href="/export-my-event-participants/123454321"
        id="download-event-registration"
      >
        <Icon
          className="mr-5"
          color="#000"
          name="download"
          size={14}
        />
        <FormattedMessage
          id="global.export"
          values={Object {}}
        />
      </a>
    </ParticipantListstyle__TitleContainer>
    <ParticipantListstyle__List>
      <Relay(Participant)
        isAnonymous={false}
        key="0"
        participant={
          Object {
            "$fragmentRefs": null,
          }
        }
      />
    </ParticipantListstyle__List>
  </div>
</ParticipantListstyle__Container>
`;
